--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
-  "name": "mermaid-ga",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@neo4j-apps/mermaid-ga",
+  "version": "0.0.0",
+  "private": false,
+  "homepage": ".",
+  "main": "dist/index.html",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neo4j-apps/mermaid-ga.git"
+  },
+  "keywords": [],
+  "author": "Andreas Kollegger  <andreas.kollegger@neo4j.com> (http://neo4j.com)",
+  "license": "Apache-2.0",
+  "neo4jDesktop": {
+    "apiVersion": "^1.4.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,16 +22,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "debounce": "^1.2.0",
+    "mermaid": "^8.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-simple-code-editor": "^0.11.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build && mv build dist",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "predeploy": "rm -rf dist && npm run build",
+    "deploy": "gh-pages -d dist",
+    "release": "np --no-tests"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +53,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/mermaid": "^8.2.1",
+    "gh-pages": "^2.2.0",
+    "np": "^6.2.3",
+    "npm-run-all": "^4.1.5",
+    "shx": "^0.3.2"
+  },
+  "np": {
+    "yarn": false,
+    "releaseDraft": true
   }
 }
